5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1649_2447.log
== TEST (2019-04-04 20:47:27) 
-- CODE:
preco=float(input("Digite o valor do preco: "))
pagamento=float(input("Digite o valor do pagamento: "))
if(preco>pagamento):
   x=preco-pagamento
	x=round(x,2)
	print("Falta ",x)
else:
	y=pagamento-preco
	y=round(y,2)
	print("Troco de ",y)
-- ERROR:
File "XXXX", line 5
    x=round(x,2)
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:47:47) 
-- CODE:
preco=float(input("Digite o valor do preco: "))
pagamento=float(input("Digite o valor do pagamento: "))
if(preco>pagamento):
   x=preco-pagamento
	z=round(x,2)
	print("Falta ",z)
else:
	y=pagamento-preco
	y=round(y,2)
	print("Troco de ",y)
-- ERROR:
File "XXXX", line 5
    z=round(x,2)
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:48:26) 
-- CODE:
preco=float(input("Digite o valor do preco: "))
pagamento=float(input("Digite o valor do pagamento: "))
if(preco>pagamento):
   x=preco-pagamento
    z= round(x,2)
   print("Falta ",z)
else:
	y=pagamento-preco
	y=round(y,2)
	print("Troco de ",y)
-- ERROR:
File "XXXX", line 5
    z= round(x,2)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:48:54) 
-- CODE:
preco=float(input("Digite o valor do preco: "))
pagamento=float(input("Digite o valor do pagamento: "))
if(preco>pagamento):
   preco=preco-pagamento
   preco=round(x,2)
   print("Falta ",preco)
else:
	y=pagamento-preco
	y=round(y,2)
	print("Troco de ",y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    preco=round(x,2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:49:07) 
-- CODE:
preco=float(input("Digite o valor do preco: "))
pagamento=float(input("Digite o valor do pagamento: "))
if(preco>pagamento):
   preco=preco-pagamento
   preco=round(x,2)
   print("Falta ",preco)
else:
	y=pagamento-preco
	y=round(y,2)
	print("Troco de ",y)
-- EXECUTION TIME:
0.142704
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 5, in <module>
    preco=round(x,2)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:49:44) 
-- CODE:
preco=float(input("Digite o valor do preco: "))
pagamento=float(input("Digite o valor do pagamento: "))
if(preco>pagamento):
   preco=preco-pagamento
   preco=round(preco,2)
   print("Falta ",preco)
else:
	pagamento=pagamento-preco
	pagamento=round(pagamento,2)
	print("Troco de ",pagamento)
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:49:53) 
-- CODE:
preco=float(input("Digite o valor do preco: "))
pagamento=float(input("Digite o valor do pagamento: "))
if(preco>pagamento):
   preco=preco-pagamento
   preco=round(preco,2)
   print("Falta ",preco)
else:
	pagamento=pagamento-preco
	pagamento=round(pagamento,2)
	print("Troco de ",pagamento)
-- EXECUTION TIME:
0.12991
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 13:15:20) 
-- CODE:
preco=float(input("Digite o valor do preco: "))
pagamento=float(input("Digite o valor do pagamento: "))
if(preco>pagamento):
   preco=preco-pagamento
   preco=round(preco,2)
   print("Falta ",preco)
else:
	pagamento=pagamento-preco
	pagamento=round(pagamento,2)
	print("Troco de ",pagamento)
-- EXECUTION TIME:
0.127564
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 23:37:45) 
-- CODE:
preco=float(input("Digite o valor do preco: "))
pagamento=float(input("Digite o valor do pagamento: "))
if(preco>pagamento):
   preco=preco-pagamento
   preco=round(preco,2)
   print("Falta ",preco)
else:
	pagamento=pagamento-preco
	pagamento=round(pagamento,2)
	print("Troco de ",pagamento)
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
